--- a/ps5000a/PS5000ABlockCapture/Properties/Resources.resx
+++ b/ps5000a/PS5000ABlockCapture/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="algolIlusha" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\algolIlusha.pdf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="ВычисленияЗавершены" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ВычисленияЗавершены.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
