--- a/Defect2019/Properties/Resources.resx
+++ b/Defect2019/Properties/Resources.resx
@@ -151,4 +151,7 @@
   <data name="СохранениеДанных" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\СохранениеДанных.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="СоздаемЭллипсы" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\СоздаемЭллипсы.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
