--- a/Defect2019/Properties/Resources.resx
+++ b/Defect2019/Properties/Resources.resx
@@ -160,4 +160,7 @@
   <data name="Поехали" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Поехали.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="ТестированиеОкончено" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ТестированиеОкончено.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
