--- a/Defect2019/Properties/Resources.resx
+++ b/Defect2019/Properties/Resources.resx
@@ -178,4 +178,7 @@
   <data name="roger" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\roger.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="gamestartup" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\gamestartup.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
