--- a/ps5000a/PS5000ABlockCapture/Properties/Resources.resx
+++ b/ps5000a/PS5000ABlockCapture/Properties/Resources.resx
@@ -121,6 +121,9 @@
   <data name="algolIlusha" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\algolIlusha.pdf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="GraficFunc" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\GraficFunc.R;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="ВычисленияЗавершены" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ВычисленияЗавершены.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
@@ -132,5 +135,11 @@
   </data>
   <data name="РазницаГотова" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\РазницаГотова.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="ГрафикиДоступны" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ГрафикиДоступны.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="СоздаютсяГрафики" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\СоздаютсяГрафики.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
