--- a/Defect2019/Properties/Resources.resx
+++ b/Defect2019/Properties/Resources.resx
@@ -223,4 +223,7 @@
   <data name="RMdator" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\RMdator.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Пасхалка" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Пасхалка.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
